--- a/XOTIN-QIZLAR_2/index.html
+++ b/XOTIN-QIZLAR_2/index.html
@@ -13,11 +13,8 @@
 <body>
     
 <!-- header start -->
-<div id="preloder">
-    <div class="loader"></div>
- </div>
 
-        <header>
+    <header>
             <div class="header">
                 <section class="container">
                     <div class="header__top">
@@ -29,6 +26,8 @@
                         <div class="header__item">
 
                             <div class="header__item__top">
+
+															<button class="header__from__true"><i class="fas fa-search"></i></button>
 
                                 <div>
                                     <a class="header__item__link" href="tel:+998 97 928 39 99">
@@ -57,6 +56,16 @@
                                 </div>
 
                             </div>
+
+														<div class="header__form">
+															<section class="container__cmd">
+																<form action="#!">
+																	<input type="text" class="header__form__input" placeholder="Text">
+																	<button class="header__form__button"><i class="fas fa-search"></i></button>
+																</form>
+																	<button class="header__button__false"><i class="fas fa-times"></i></button>
+															</section>
+														</div>
 
                             <span class="header__border"></span>
                             
@@ -110,18 +119,16 @@
                             </div>
 
                             <div class="header__mrx__max__burger">
-								<a class="header__menu__burger" href="#!"><i class="fas fa-bars"></i></a>
-							</div>
+								                <a class="header__menu__burger" href="#!"><i class="fas fa-bars"></i></a>
+						              	</div>
 
                         </div>
                     </div>
                 </section>
             </div>
-        </header>
+    </header>
 
 <!-- header end -->
-
-
 
 
 <!-- slaeder start -->
@@ -467,6 +474,37 @@
 
 <!-- Affiliate end -->
 
+
+<!-- subscription start -->
+
+
+<div class="subscription"> 
+	<section class="container">
+		<div class="subscription__list">
+			<div class="subscription__item">
+				<h2 class="about__title__h2">Будьте в курсе</h2>
+				<div class="subscription__text">
+					<p>Подпишитесь на последние обнавления и узнавайте новынках специлных предложниях первыми</p>
+				</div>
+			</div>
+
+			<div class="subscription__item">
+				<form action="#!">
+					<input class="subscription__input" type="email" value="@gmail.com">
+					<label>
+						<input class="subscription__chik__input" type="checkbox" name="subscription__chik">
+						Я согласен на обработку персональных данных а тагже с условаиями патписки
+					</label>
+
+					<button type="submit" class="subscription__button">Подписаться</button>
+				</form>
+			</div>
+		</div>
+	</section>
+</div>
+
+
+<!-- subscription end -->
 
 
 <!-- footer start -->
